parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr05.wacc
# type mismatch: bool <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = 't'
end
